[tool.poetry]
name = "shiny-cm6"
version = "0.1.0"
description = ""
authors = ["Fred Guth <fredguth@fredguth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shiny = "^1.0.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
